2002-10-17  Hiroyuki Ito <hito@crl.go.jp>

	* [w3m-dev 03342]
	* doc/README.img: updated
	* doc-jp/README.img: updated

2002-10-17  Daiki Ueno <ueno@unixuser.org>

	* [w3m-dev 03341] white space is needed to close an empty-element tag
	* parsetagx.c (parse_tag): extract tagname until '/'

2002-10-11  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03339] Re: Debian Bug#164098 w3m: <sup> is not properly supported
	* file.c (HTMLtagproc1): HTML_SUP, HTML_N_SUP, HTML_SUB, HTML_N_SUB
	* html.c (TagMAP): sup, /sup, sub, /sub
	* html.c (HTML_SUP): added
		(HTML_N_SUP): added
		(HTML_SUB): added
		(HTML_N_SUB): added
	* table.c (feed_table_tag): HTML_SUP, HTML_N_SUP, HTML_SUB, HTML_N_SUB
	* tagtable.tab (sup): added
		(/sup): added
		(sub): added
		(/sub): added

2002-10-11  Hiroyuki Ito <hito@crl.go.jp>

	* [w3m-dev 03337] delete unused functions in fb.c etc. (Re: canna patch)
	* w3mimg/fb/fb.c (fb_image_rotate): delete
		(fb_frame_rotate): delete
		(fb_pset): delete
		(fb_get_color): delete
		(fb_clear): delete
		(fb_cmap_disp): delete
		(fb_fscrn_disp): delete
		(fb_vscrn_disp): delete
	* w3mimg/fb/fb.h (fb_image_rotate): delete
		(fb_frame_rotate): delete
		(fb_pset): delete
		(fb_get_color): delete
		(fb_clear): delete
		(fb_cmap_disp): delete
		(fb_fscrn_disp): delete
		(fb_vscrn_disp): delete
	* w3mimg/fb/fb_img.c (fb_image_draw_simple): delete
	* w3mimg/fb/fb_img.h (fb_image_draw_simple): delete

	* w3mimg/fb/license.txt: removed, follow w3m license

2002-10-09  AIDA Shinra <aida-s@jcom.home.ne.jp>

	* [w3m-dev 03336] proxy check for https authorization:
	* url.c (HTTPrequest): check CONNECT request for ssl

2002-10-06  Hiroyuki Ito <hito@crl.go.jp>

	* [w3m-dev 03333] x11 image animation
	* w3mimg/x11/x11_w3mimg.c (struct x11_image): added
		(x11_img_new): added
		(resize_image): added
		(x11_load_image): rewrite GdkPixbuf
		(x11_show_image): rewrite GdkPixbuf
		(x11_free_image): rewrite GdkPixbuf

2002-10-02  Yuji Abe <cbo46560@pop12.odn.ne.jp>
